[gd_scene load_steps=10 format=3 uid="uid://c2avhp51q28y4"]

[ext_resource type="Script" path="res://menus/menu_selection/script/menu_selection.gd" id="1_qpvc5"]
[ext_resource type="AudioStream" uid="uid://tku240roit3h" path="res://menus/menu_selection/music/medieval-adventure-270567.mp3" id="1_r1j1n"]
[ext_resource type="PackedScene" uid="uid://cnygbi35rmo76" path="res://interface/levels/scenes/map_levels.tscn" id="2_ffvps"]
[ext_resource type="Texture2D" uid="uid://d2lfc3pwv64n6" path="res://interface/1 Frames/map_frame.png" id="4_3lbvi"]
[ext_resource type="Texture2D" uid="uid://bkno638orwh0d" path="res://interface/3 Icons/Icons yellow/Icon_13.png" id="4_xux8c"]
[ext_resource type="FontFile" uid="uid://cek71hj6bulak" path="res://interface/7 General Font/Pixellari.ttf" id="5_l4uxa"]
[ext_resource type="Texture2D" uid="uid://44pghpicgyai" path="res://interface/3 Icons/Icons yellow/Icon_33.png" id="7_fsh8t"]

[sub_resource type="LabelSettings" id="LabelSettings_opalg"]
font = ExtResource("5_l4uxa")
font_size = 60
outline_size = 9
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_el0bc"]
font = ExtResource("5_l4uxa")
font_size = 23
outline_size = 9
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)

[node name="menu_selection" type="CanvasLayer"]
script = ExtResource("1_qpvc5")

[node name="MapLevels" parent="." instance=ExtResource("2_ffvps")]
position = Vector2(1, -5)

[node name="resources" type="Node2D" parent="."]

[node name="audio" type="Control" parent="resources"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="audio_menu" type="AudioStreamPlayer2D" parent="resources/audio"]
stream = ExtResource("1_r1j1n")
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="images" type="Control" parent="resources"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="mark_levels" type="Sprite2D" parent="resources/images"]
texture_filter = 5
position = Vector2(601.5, 606.5)
scale = Vector2(2.02778, 0.404412)
texture = ExtResource("4_3lbvi")

[node name="labels" type="Control" parent="resources"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="lbl_levels" type="Label" parent="resources/labels"]
layout_mode = 2
offset_left = 20.0
offset_top = 582.0
offset_right = 260.0
offset_bottom = 705.0
text = "Niveles

"
label_settings = SubResource("LabelSettings_opalg")
horizontal_alignment = 1
uppercase = true

[node name="lbl_level1" type="Label" parent="resources/labels"]
layout_mode = 2
offset_left = 486.0
offset_top = 248.0
offset_right = 522.0
offset_bottom = 313.0
text = "1

"
label_settings = SubResource("LabelSettings_el0bc")
horizontal_alignment = 1
uppercase = true

[node name="lbl_level2" type="Label" parent="resources/labels"]
layout_mode = 2
offset_left = 734.0
offset_top = 290.0
offset_right = 770.0
offset_bottom = 368.0
text = "2


"
label_settings = SubResource("LabelSettings_el0bc")
horizontal_alignment = 1
uppercase = true

[node name="lbl_level3" type="Label" parent="resources/labels"]
layout_mode = 2
offset_left = 1015.0
offset_top = 297.0
offset_right = 1051.0
offset_bottom = 375.0
text = "3


"
label_settings = SubResource("LabelSettings_el0bc")
horizontal_alignment = 1
uppercase = true

[node name="boxs" type="Control" parent="resources"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="vbox_salir" type="VBoxContainer" parent="resources/boxs"]
layout_mode = 0
offset_left = 1071.0
offset_top = 557.0
offset_right = 1153.0
offset_bottom = 658.0
theme_override_constants/separation = 66

[node name="btn_salir" type="Button" parent="resources/boxs/vbox_salir"]
self_modulate = Color(1, 1, 0.054902, 1)
texture_filter = 5
layout_mode = 2
focus_mode = 0
text = "



"
icon = ExtResource("4_xux8c")
flat = true
icon_alignment = 1
expand_icon = true

[node name="vbox_menu" type="VBoxContainer" parent="resources/boxs"]
layout_mode = 0
offset_left = 482.0
offset_top = 234.0
offset_right = 568.0
offset_bottom = 334.0
scale = Vector2(0.5, 0.5)
theme_override_constants/separation = 66

[node name="btn_start" type="Button" parent="resources/boxs/vbox_menu"]
layout_mode = 2
focus_mode = 0
text = "



"
flat = true

[node name="vbox_start2" type="VBoxContainer" parent="resources/boxs"]
layout_mode = 0
offset_left = 731.0
offset_top = 276.0
offset_right = 817.0
offset_bottom = 376.0
scale = Vector2(0.5, 0.5)
theme_override_constants/separation = 66

[node name="btn_start2" type="Button" parent="resources/boxs/vbox_start2"]
layout_mode = 2
focus_mode = 0
text = "



"
flat = true

[node name="vbox_multi" type="VBoxContainer" parent="resources/boxs"]
layout_mode = 0
offset_left = 264.0
offset_top = 557.0
offset_right = 329.0
offset_bottom = 657.0
alignment = 1

[node name="btn_multijugador" type="Button" parent="resources/boxs/vbox_multi"]
self_modulate = Color(1, 1, 0.054902, 1)
texture_filter = 5
layout_mode = 2
focus_mode = 0
text = "



"
icon = ExtResource("7_fsh8t")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="resources/boxs/vbox_salir/btn_salir" to="." method="_on_btn_salir_pressed"]
[connection signal="pressed" from="resources/boxs/vbox_menu/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="resources/boxs/vbox_start2/btn_start2" to="." method="_on_btn_start_2_pressed"]
[connection signal="pressed" from="resources/boxs/vbox_multi/btn_multijugador" to="." method="_on_btn_multijugador_pressed"]
